--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <p class="mb-0">I have created this website on my own</p>
               </div>
             </div>
-            <img class="img-fluid" src="img/Screenshot(27).png" alt="">
+            <img class="img-fluid" src="img/Screenshot (27).png" alt=" ">
           </a>
         </div>
         <div class="col-lg-6">
@@ -181,8 +181,8 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Data mining via Google API</div>
-                <p class="mb-0">Data mined peoples location into a map via Python,SQL and Google API</p>
+                <div class="h2" id="new">Data mining via Google API</div>
+                <p class="mb-0" id="new">Data mined peoples location into a map via Python,SQL and Google API</p>
               </div>
             </div>
             <img class="img-fluid" src="img/pic11.jpg" alt="">
@@ -196,8 +196,8 @@
   <section class="content-section bg-primary text-white">
     <div class="container text-center">
       <h2 class="mb-4">Contact me for furthur queries</h2>
-      <a href="#!" class="btn btn-xl btn-light mr-4">Email</a>
-      <a href="#!" class="btn btn-xl btn-dark">Linkedin</a>
+      <a href="https://mail.google.com/" class="btn btn-xl btn-light mr-4">Email</a>
+      <a href="https://www.linkedin.com/in/archit-dasgupta-426541166/" class="btn btn-xl btn-dark">Linkedin</a>
     </div>
   </section>
 
@@ -215,17 +215,17 @@
     <div class="container">
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#!">
-            <i class="icon-social-facebook"></i>
+          <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/archit-dasgupta-426541166/">
+            <i class="icon-social-linkedin"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#!">
+          <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/arc__hit">
             <i class="icon-social-twitter"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white" href="#!">
+          <a class="social-link rounded-circle text-white" href="https://github.com/Archit-Dasgupta">
             <i class="icon-social-github"></i>
           </a>
         </li>
