--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
 
   <title>Archit Dasgupta/Portfolio</title>
 
@@ -21,13 +19,14 @@
   <!-- Custom CSS -->
  <link href="css/stylish-portfolio.min.css" rel="stylesheet">
  <!-- <link href="css/stylish-portfolio.css" rel="stylesheet">-->
+  
 
 </head>
 
 <body id="page-top">
 
   <!-- Navigation -->
-  <a class="menu-toggle rounded" href="#">
+<a class="menu-toggle rounded" href="#">
     <i class="fas fa-bars"></i>
   </a>
   <nav id="sidebar-wrapper">
@@ -42,7 +41,7 @@
         <a class="js-scroll-trigger" href="#about">About Me</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#services">Courses Offered</a>
+        <a class="js-scroll-trigger" href="#services">Skills</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#portfolio">Recent projects</a>
@@ -52,17 +51,16 @@
       </li>
     </ul>
   </nav>
-
-  <!-- Header -->
+ <!-- Header -->
   <header class="masthead d-flex">
-    <div class="container text-center my-auto">
+    <div class="container text-center my-auto" >
       <h1 class="mb-1">Archit Dasgupta</h1>
       <h3 class="mb-5">
         <em>Instrumentation Engineer with a minor in Data Science. Web Developer.</em>
       </h3>
       <a class="btn btn-dark btn-xl js-scroll-trigger" href="#about">Learn More</a>
     </div>
-    <div class="overlay"></div>
+       <div class="overlay"></div>
   </header>
 
   <!-- About -->
@@ -88,7 +86,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-screen-smartphone"></i>
+            <i class="icon-graduation"></i>
           </span>
           <h4>
             <strong>An Instrumentation and control Engineer</strong>
@@ -106,7 +104,7 @@
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-like"></i>
+            <i class="icon-mouse"></i>
           </span>
           <h4>
             <strong>A Web Developer</strong>
@@ -115,7 +113,7 @@
         </div>
         <div class="col-lg-3 col-md-6">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-mustache"></i>
+            <i class="icon-docs"></i>
           </span>
           <h4>
             <strong> Other skills</strong>
@@ -132,7 +130,7 @@
       <h2 class="mx-auto mb-5">Like what you see get in touch via my
         <em>mail</em>
        </h2>
-      <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/themes/stylish-portfolio/">Learn more</a>
+      <a class="btn btn-dark btn-xl" href="https://startbootstrap.com/themes/stylish-portfolio/">Learn more</a>
     </div>
   </section>
 
@@ -192,26 +190,45 @@
     </div>
   </section>
 
-  <!-- Call to Action -->
-  <section class="content-section bg-primary text-white">
-    <div class="container text-center">
-      <h2 class="mb-4">Contact me for furthur queries</h2>
-      <a href="https://mail.google.com/" class="btn btn-xl btn-light mr-4">Email</a>
-      <a href="https://www.linkedin.com/in/archit-dasgupta-426541166/" class="btn btn-xl btn-dark">Linkedin</a>
-    </div>
-  </section>
+ 
 
-  <!-- Map -->
-  <div id="contact" class="map">
-    <iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
-    <br />
-    <small>
-      <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
-    </small>
-  </div>
-
-  <!-- Footer -->
-  <footer class="footer text-center">
+   <section class="content-section" id="contact">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading">Contact Me</h2>
+                </div>
+                <form id="contactForm" name="sentMessage" novalidate="novalidate">
+                    <div class="row align-items-stretch mb-5">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name." />
+                                <p class="help-block text-danger"></p>
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address." />
+                                <p class="help-block text-danger"></p>
+                            </div>
+                            <div class="form-group mb-md-0">
+                                <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number." />
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group form-group-textarea mb-md-0">
+                                <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <div id="success"></div>
+                        <button class="btn btn-dark btn-xl text-uppercase" id="sendMessageButton" type="submit">Send Message</button>
+                    </div>
+                </form>
+            </div>
+        </section>
+        <!-- Footer-->
+     <footer class="footer text-center">
     <div class="container">
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
@@ -248,7 +265,13 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/stylish-portfolio.min.js"></script>
+  <!--Some Jquery template-->
+  <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/TweenLite.min.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/EasePack.min.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo.js'></script>
+
 
 </body>
 
 </html>
+
